samples/_failures_safe/1761497411_9df175_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_831bfc5b.c: In function ‘main’:
./samples/SAFE/__tmp_831bfc5b.c:163:19: error: missing terminating " character
  163 |         if (scanf("%d %d %
      |                   ^~~~~~~~
./samples/SAFE/__tmp_831bfc5b.c:163:9: error: expected expression at end of input
  163 |         if (scanf("%d %d %
      |         ^~
./samples/SAFE/__tmp_831bfc5b.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_831bfc5b.c:163:9: error: expected declaration or statement at end of input
